# os_ex3

./: CMakeLists.txt  MapReduceClient.cpp  MapReduceFramework.cpp
Sample Client/: SampleClient.cpp
